<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:id="@+id/facility_view">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_back"
        android:contentDescription="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:background="?attr/selectableItemBackgroundBorderless" />

    <ScrollView
        android:id="@+id/scroll_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            tools:ignore="MissingConstraints">

            <!-- Title for Facility Information -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Facility Information"
                android:textSize="23sp"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:fontFamily="@font/raleway_medium"
                android:layout_marginBottom="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/textColor"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <ImageView
                    android:id="@+id/facilityImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:layout_margin="0dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/textColor"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Facility Name:"
                    android:textColor="@color/textColor"
                    android:textSize="17sp"
                    android:fontFamily="@font/raleway_semibold"
                    android:gravity="center_vertical"/>

                <Space
                    android:layout_width="8dp"
                    android:layout_height="0dp"/>

                <TextView
                    android:id="@+id/facilityName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Facility XYZ"
                    android:textColor="@color/textColor"
                    android:textSize="17sp"
                    android:fontFamily="@font/raleway_semibold"
                    android:gravity="center_vertical"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/editFacilityName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="Enter Facility Name"
                    android:textColor="@color/textColor"
                    android:textSize="17sp"
                    android:fontFamily="@font/raleway_semibold"
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/textColor"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Address:"
                    android:textColor="@color/textColor"
                    android:textSize="17sp"
                    android:fontFamily="@font/raleway_semibold"
                    android:gravity="center_vertical"/>

                <Space
                    android:layout_width="8dp"
                    android:layout_height="0dp"/>

                <TextView
                    android:id="@+id/address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="123 Main Street"
                    android:textColor="@color/textColor"
                    android:textSize="17sp"
                    android:fontFamily="@font/raleway_semibold"
                    android:gravity="center_vertical"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/editAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="Enter Address"
                    android:textColor="@color/textColor"
                    android:textSize="17sp"
                    android:fontFamily="@font/raleway_semibold"
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"/>

            </LinearLayout>

            <!-- Divider Line -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/textColor"
                android:layout_marginBottom="16dp"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Owner:"
                    android:textColor="@color/textColor"
                    android:textSize="17sp"
                    android:fontFamily="@font/raleway_semibold"
                    android:gravity="center_vertical"/>

                <Space
                    android:layout_width="8dp"
                    android:layout_height="0dp"/>

                <TextView
                    android:id="@+id/owner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="John Doe"
                    android:textColor="@color/textColor"
                    android:textSize="17sp"
                    android:fontFamily="@font/raleway_semibold"
                    android:gravity="center_vertical"
                    android:layout_weight="1"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/textColor"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Events:"
                    android:textColor="@color/textColor"
                    android:textSize="17sp"
                    android:fontFamily="@font/raleway_semibold"
                    android:gravity="center_vertical"/>

                <Space
                    android:layout_width="8dp"
                    android:layout_height="0dp"/>

                <TextView
                    android:id="@+id/facilities_events_list_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="There are no events at this facility currently."
                    android:textColor="@color/textColor"
                    android:textSize="17sp"
                    android:fontFamily="@font/raleway_semibold"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:visibility="gone"/>
                <ListView
                    android:id="@+id/facilities_events_list"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    tools:ignore="NestedScrolling"
                    android:padding="0dp"
                    android:layout_margin="0dp">
                </ListView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/toolbar"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/white"
        android:visibility="gone">

            <Button
                android:id="@+id/edit_button"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="Edit"
                android:textColor="@color/white"
                android:backgroundTint="@color/figmaBlue"
                app:cornerRadius="5dp">
            </Button>
            <Button
                android:id="@+id/save_button"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="Save"
                android:backgroundTint="@color/figmaBlue"
                android:visibility="gone"
                app:cornerRadius="5dp"/>

            <Button
                android:id="@+id/delete_button"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="Delete"
                android:textColor="@color/figmaBlue"
                android:backgroundTint="@color/white"
                app:cornerRadius="5dp">
            </Button>

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="Cancel"
                android:textColor="@color/figmaBlue"
                android:backgroundTint="@color/white"
                app:cornerRadius="5dp"
                android:visibility="gone">
                </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
