...
    <string name="paragraph">residence_certainly_elsewhere_something_she_preferred_cordially_law_age_his_surprise_formerly_mrs_perceive_few_stanhill_moderate_of_in_power_match_on_truth_worse_voice_would_large_an_it_sense_shall_an_match_learn_by_expect_it_result_silent_in_formal_of_ask_eat_questions_abilities_described_elsewhere_assurance_appetite_in_unlocked_advanced_breeding_position_concerns_as_
    <string name="notification_settings">Notification Settings</string>
    <string name="unjoin">Unjoin</string>
    <string name="cancel">Cancel</string>
    <string name="instructionText">Align The QR Code Within The Frame To Scan</string>
    <string name="promptText">Would you like to register?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
