...
                    android:layout_height="0dp"/>

                <TextView
                    android:id="@+id/facilityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Facility 1"
                    android:textColor="@color/textColor"
                    android:textSize="17sp"
                    android:fontFamily="@font/raleway_semibold"
                    android:gravity="center_vertical"
                    android:layout_weight="1"/>

...
